[package]
name = "ic-dl-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ic-cdk = "0.7.4"
ic-web3 = "0.1.7"
ic-utils = { package = "canistergeek_ic_rust", version = "0.3.1" }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt"]}
