[package]
name = "ic-dl-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ic-cdk = "0.7.4"
ic-utils = { package = "canistergeek_ic_rust", version = "0.3.1" }
ic-web3 = { git = "https://github.com/ivanlele/ic-web3", branch="dev" }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt"]}
